<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_temperature"
    tools:context=".TemperatureconvertActivity">

    <Button
        android:id="@+id/convertirbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:onClick="conversion"
        android:text="@string/convertir"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/valeurTemperature"
        android:layout_width="267dp"
        android:layout_height="82dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Saisietemperature"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="280dp"
        android:layout_height="156dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valeurTemperature"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/Farenheitbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CaF"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/Celsiusbitton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FaC"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>