<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmonnaie"
    tools:context=".MonnaieconvertActivity">

    <TextView
        android:id="@+id/textedevisedepart"
        android:layout_width="408dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/devisedepart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saisirmontant" />

    <Spinner
        android:id="@+id/monnaiedepart_spinner"
        android:layout_width="408dp"
        android:layout_height="119dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textedevisedepart" />

    <EditText
        android:id="@+id/saisirmontant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/saisirmontant"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/monnaiearrivee_spinner"
        android:layout_width="403dp"
        android:layout_height="138dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textedevisearrivee" />

    <TextView
        android:id="@+id/textedevisearrivee"
        android:layout_width="404dp"
        android:layout_height="61dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="@string/devisearrive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monnaiedepart_spinner" />

    <Button
        android:id="@+id/button_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/convertir"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monnaiearrivee_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>